# auto-classes

./: .gitignore  README.md  pyproject.toml
integration_tests/algo_against_oracle/: oracle.config  oracle.py  oracle_cache.py  oracle_config.py  test_algo_against_oracle.py  test_oracle_cache.py
src/auto_classes/algorithm/: __init__.py  generate_classes.py
src/auto_classes/cli/: __main__.py
src/auto_classes/core/: __init__.py  classroom.py  classroom_set.py  student.py
src/auto_classes/rules/: __init__.py  classroom_invariant.py  classroom_tag.py  constraint.py  student_relation.py
src/auto_classes/serialization/: __init__.py  classroom_tags.py  students.py
src/auto_classes/ui/: __main__.py  app.py
tests/: test_cli.py
tests/algorithm/: test_generate_classes.py
tests/cli/: test___main__.py
tests/core/: test_classroom.py  test_classroom_set.py  test_student.py
tests/rules/: test_classroom_invariant.py  test_classroom_tag.py  test_constraint.py  test_student_relation.py
tests/serialization/: test_classroom_tags.py  test_students.py
